--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.4.3",
         "@mui/material": "^6.4.3",
+        "@react-input/mask": "^2.0.4",
+        "@stripe/stripe-js": "^5.6.0",
         "@types/js-cookie": "^3.0.6",
         "axios": "^1.7.9",
         "formik": "^2.4.6",
         "js-cookie": "^3.0.5",
         "lucide-react": "^0.474.0",
-        "next": "15.1.6",
+        "next": "^15.1.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "stripe": "^17.6.0",
         "yup": "^1.6.1"
     },
     "devDependencies": {
@@ -28,6 +31,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/react-input-mask": "^3.0.6",
         "eslint": "^9",
         "eslint-config-next": "15.1.6",
         "postcss": "^8",
